--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 <div class="ctrls">
   <button id="settings">Settings</button>
   <button id="savecounters">Save Counters</button>
+  <button id="loadcounters">Load Counters from File</button>
+  <input style="display: none" id="countersfile" type="file" />
 </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
